--- a/final/final_report-Copy1.ipynb
+++ b/final/final_report-Copy1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,9 +120,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of documents, D: 20\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0024.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0031.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0136.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0122.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0080.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0096.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0108.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0045.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0052.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0103.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0089.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0129.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0115.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0059.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0066.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0073.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0017.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0003.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0010.txtfinished\n",
+      "load../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_0038.txtfinished\n",
+      "vocab size is 632\n",
+      "load wordToI finished\n"
+     ]
+    }
+   ],
    "source": [
     "t1 = time.time()\n",
     "datafile = \"../DataPreprocess/nipstxt/nipstoy20/doc_short_wID_12_*.txt\"\n",
@@ -174,9 +204,518 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model constructed\n",
+      "burnin: 0\n",
+      "burnin: 1\n",
+      "burnin: 2\n",
+      "burnin: 3\n",
+      "burnin: 4\n",
+      "burnin: 5\n",
+      "burnin: 6\n",
+      "burnin: 7\n",
+      "burnin: 8\n",
+      "burnin: 9\n",
+      "burnin: 10\n",
+      "burnin: 11\n",
+      "burnin: 12\n",
+      "burnin: 13\n",
+      "burnin: 14\n",
+      "burnin: 15\n",
+      "burnin: 16\n",
+      "burnin: 17\n",
+      "burnin: 18\n",
+      "burnin: 19\n",
+      "burnin: 20\n",
+      "burnin: 21\n",
+      "burnin: 22\n",
+      "burnin: 23\n",
+      "burnin: 24\n",
+      "burnin: 25\n",
+      "burnin: 26\n",
+      "burnin: 27\n",
+      "burnin: 28\n",
+      "burnin: 29\n",
+      "burnin: 30\n",
+      "burnin: 31\n",
+      "burnin: 32\n",
+      "burnin: 33\n",
+      "burnin: 34\n",
+      "burnin: 35\n",
+      "burnin: 36\n",
+      "burnin: 37\n",
+      "burnin: 38\n",
+      "burnin: 39\n",
+      "burnin: 40\n",
+      "burnin: 41\n",
+      "burnin: 42\n",
+      "burnin: 43\n",
+      "burnin: 44\n",
+      "burnin: 45\n",
+      "burnin: 46\n",
+      "burnin: 47\n",
+      "burnin: 48\n",
+      "burnin: 49\n",
+      "burnin: 50\n",
+      "burnin: 51\n",
+      "burnin: 52\n",
+      "burnin: 53\n",
+      "burnin: 54\n",
+      "burnin: 55\n",
+      "burnin: 56\n",
+      "burnin: 57\n",
+      "burnin: 58\n",
+      "burnin: 59\n",
+      "burnin: 60\n",
+      "burnin: 61\n",
+      "burnin: 62\n",
+      "burnin: 63\n",
+      "burnin: 64\n",
+      "burnin: 65\n",
+      "burnin: 66\n",
+      "burnin: 67\n",
+      "burnin: 68\n",
+      "burnin: 69\n",
+      "burnin: 70\n",
+      "burnin: 71\n",
+      "burnin: 72\n",
+      "burnin: 73\n",
+      "burnin: 74\n",
+      "burnin: 75\n",
+      "burnin: 76\n",
+      "burnin: 77\n",
+      "burnin: 78\n",
+      "burnin: 79\n",
+      "burnin: 80\n",
+      "burnin: 81\n",
+      "burnin: 82\n",
+      "burnin: 83\n",
+      "burnin: 84\n",
+      "burnin: 85\n",
+      "burnin: 86\n",
+      "burnin: 87\n",
+      "burnin: 88\n",
+      "burnin: 89\n",
+      "burnin: 90\n",
+      "burnin: 91\n",
+      "burnin: 92\n",
+      "burnin: 93\n",
+      "burnin: 94\n",
+      "burnin: 95\n",
+      "burnin: 96\n",
+      "burnin: 97\n",
+      "burnin: 98\n",
+      "burnin: 99\n",
+      "burnin: 100\n",
+      "burnin: 101\n",
+      "burnin: 102\n",
+      "burnin: 103\n",
+      "burnin: 104\n",
+      "burnin: 105\n",
+      "burnin: 106\n",
+      "burnin: 107\n",
+      "burnin: 108\n",
+      "burnin: 109\n",
+      "burnin: 110\n",
+      "burnin: 111\n",
+      "burnin: 112\n",
+      "burnin: 113\n",
+      "burnin: 114\n",
+      "burnin: 115\n",
+      "burnin: 116\n",
+      "burnin: 117\n",
+      "burnin: 118\n",
+      "burnin: 119\n",
+      "burnin: 120\n",
+      "burnin: 121\n",
+      "burnin: 122\n",
+      "burnin: 123\n",
+      "burnin: 124\n",
+      "burnin: 125\n",
+      "burnin: 126\n",
+      "burnin: 127\n",
+      "burnin: 128\n",
+      "burnin: 129\n",
+      "burnin: 130\n",
+      "burnin: 131\n",
+      "burnin: 132\n",
+      "burnin: 133\n",
+      "burnin: 134\n",
+      "burnin: 135\n",
+      "burnin: 136\n",
+      "burnin: 137\n",
+      "burnin: 138\n",
+      "burnin: 139\n",
+      "burnin: 140\n",
+      "burnin: 141\n",
+      "burnin: 142\n",
+      "burnin: 143\n",
+      "burnin: 144\n",
+      "burnin: 145\n",
+      "burnin: 146\n",
+      "burnin: 147\n",
+      "burnin: 148\n",
+      "burnin: 149\n",
+      "burnin: 150\n",
+      "burnin: 151\n",
+      "burnin: 152\n",
+      "burnin: 153\n",
+      "burnin: 154\n",
+      "burnin: 155\n",
+      "burnin: 156\n",
+      "burnin: 157\n",
+      "burnin: 158\n",
+      "burnin: 159\n",
+      "burnin: 160\n",
+      "burnin: 161\n",
+      "burnin: 162\n",
+      "burnin: 163\n",
+      "burnin: 164\n",
+      "burnin: 165\n",
+      "burnin: 166\n",
+      "burnin: 167\n",
+      "burnin: 168\n",
+      "burnin: 169\n",
+      "burnin: 170\n",
+      "burnin: 171\n",
+      "burnin: 172\n",
+      "burnin: 173\n",
+      "burnin: 174\n",
+      "burnin: 175\n",
+      "burnin: 176\n",
+      "burnin: 177\n",
+      "burnin: 178\n",
+      "burnin: 179\n",
+      "burnin: 180\n",
+      "burnin: 181\n",
+      "burnin: 182\n",
+      "burnin: 183\n",
+      "burnin: 184\n",
+      "burnin: 185\n",
+      "burnin: 186\n",
+      "burnin: 187\n",
+      "burnin: 188\n",
+      "burnin: 189\n",
+      "burnin: 190\n",
+      "burnin: 191\n",
+      "burnin: 192\n",
+      "burnin: 193\n",
+      "burnin: 194\n",
+      "burnin: 195\n",
+      "burnin: 196\n",
+      "burnin: 197\n",
+      "burnin: 198\n",
+      "burnin: 199\n",
+      "burnin: 200\n",
+      "burnin: 201\n",
+      "burnin: 202\n",
+      "burnin: 203\n",
+      "burnin: 204\n",
+      "burnin: 205\n",
+      "burnin: 206\n",
+      "burnin: 207\n",
+      "burnin: 208\n",
+      "burnin: 209\n",
+      "burnin: 210\n",
+      "burnin: 211\n",
+      "burnin: 212\n",
+      "burnin: 213\n",
+      "burnin: 214\n",
+      "burnin: 215\n",
+      "burnin: 216\n",
+      "burnin: 217\n",
+      "burnin: 218\n",
+      "burnin: 219\n",
+      "burnin: 220\n",
+      "burnin: 221\n",
+      "burnin: 222\n",
+      "burnin: 223\n",
+      "burnin: 224\n",
+      "burnin: 225\n",
+      "burnin: 226\n",
+      "burnin: 227\n",
+      "burnin: 228\n",
+      "burnin: 229\n",
+      "burnin: 230\n",
+      "burnin: 231\n",
+      "burnin: 232\n",
+      "burnin: 233\n",
+      "burnin: 234\n",
+      "burnin: 235\n",
+      "burnin: 236\n",
+      "burnin: 237\n",
+      "burnin: 238\n",
+      "burnin: 239\n",
+      "burnin: 240\n",
+      "burnin: 241\n",
+      "burnin: 242\n",
+      "burnin: 243\n",
+      "burnin: 244\n",
+      "burnin: 245\n",
+      "burnin: 246\n",
+      "burnin: 247\n",
+      "burnin: 248\n",
+      "burnin: 249\n",
+      "burnin: 250\n",
+      "burnin: 251\n",
+      "burnin: 252\n",
+      "burnin: 253\n",
+      "burnin: 254\n",
+      "burnin: 255\n",
+      "burnin: 256\n",
+      "burnin: 257\n",
+      "burnin: 258\n",
+      "burnin: 259\n",
+      "burnin: 260\n",
+      "burnin: 261\n",
+      "burnin: 262\n",
+      "burnin: 263\n",
+      "burnin: 264\n",
+      "burnin: 265\n",
+      "burnin: 266\n",
+      "burnin: 267\n",
+      "burnin: 268\n",
+      "burnin: 269\n",
+      "burnin: 270\n",
+      "burnin: 271\n",
+      "burnin: 272\n",
+      "burnin: 273\n",
+      "burnin: 274\n",
+      "burnin: 275\n",
+      "burnin: 276\n",
+      "burnin: 277\n",
+      "burnin: 278\n",
+      "burnin: 279\n",
+      "burnin: 280\n",
+      "burnin: 281\n",
+      "burnin: 282\n",
+      "burnin: 283\n",
+      "burnin: 284\n",
+      "burnin: 285\n",
+      "burnin: 286\n",
+      "burnin: 287\n",
+      "burnin: 288\n",
+      "burnin: 289\n",
+      "burnin: 290\n",
+      "burnin: 291\n",
+      "burnin: 292\n",
+      "burnin: 293\n",
+      "burnin: 294\n",
+      "burnin: 295\n",
+      "burnin: 296\n",
+      "burnin: 297\n",
+      "burnin: 298\n",
+      "burnin: 299\n",
+      "sample: 0\n",
+      "sample: 1\n",
+      "sample: 2\n",
+      "sample: 3\n",
+      "sample: 4\n",
+      "sample: 5\n",
+      "sample: 6\n",
+      "sample: 7\n",
+      "sample: 8\n",
+      "sample: 9\n",
+      "sample: 10\n",
+      "sample: 11\n",
+      "sample: 12\n",
+      "sample: 13\n",
+      "sample: 14\n",
+      "sample: 15\n",
+      "sample: 16\n",
+      "sample: 17\n",
+      "sample: 18\n",
+      "sample: 19\n",
+      "sample: 20\n",
+      "sample: 21\n",
+      "sample: 22\n",
+      "sample: 23\n",
+      "sample: 24\n",
+      "sample: 25\n",
+      "sample: 26\n",
+      "sample: 27\n",
+      "sample: 28\n",
+      "sample: 29\n",
+      "sample: 30\n",
+      "sample: 31\n",
+      "sample: 32\n",
+      "sample: 33\n",
+      "sample: 34\n",
+      "sample: 35\n",
+      "sample: 36\n",
+      "sample: 37\n",
+      "sample: 38\n",
+      "sample: 39\n",
+      "sample: 40\n",
+      "sample: 41\n",
+      "sample: 42\n",
+      "sample: 43\n",
+      "sample: 44\n",
+      "sample: 45\n",
+      "sample: 46\n",
+      "sample: 47\n",
+      "sample: 48\n",
+      "sample: 49\n",
+      "sample: 50\n",
+      "sample: 51\n",
+      "sample: 52\n",
+      "sample: 53\n",
+      "sample: 54\n",
+      "sample: 55\n",
+      "sample: 56\n",
+      "sample: 57\n",
+      "sample: 58\n",
+      "sample: 59\n",
+      "sample: 60\n",
+      "sample: 61\n",
+      "sample: 62\n",
+      "sample: 63\n",
+      "sample: 64\n",
+      "sample: 65\n",
+      "sample: 66\n",
+      "sample: 67\n",
+      "sample: 68\n",
+      "sample: 69\n",
+      "sample: 70\n",
+      "sample: 71\n",
+      "sample: 72\n",
+      "sample: 73\n",
+      "sample: 74\n",
+      "sample: 75\n",
+      "sample: 76\n",
+      "sample: 77\n",
+      "sample: 78\n",
+      "sample: 79\n",
+      "sample: 80\n",
+      "sample: 81\n",
+      "sample: 82\n",
+      "sample: 83\n",
+      "sample: 84\n",
+      "sample: 85\n",
+      "sample: 86\n",
+      "sample: 87\n",
+      "sample: 88\n",
+      "sample: 89\n",
+      "sample: 90\n",
+      "sample: 91\n",
+      "sample: 92\n",
+      "sample: 93\n",
+      "sample: 94\n",
+      "sample: 95\n",
+      "sample: 96\n",
+      "sample: 97\n",
+      "sample: 98\n",
+      "sample: 99\n",
+      "sample: 100\n",
+      "sample: 101\n",
+      "sample: 102\n",
+      "sample: 103\n",
+      "sample: 104\n",
+      "sample: 105\n",
+      "sample: 106\n",
+      "sample: 107\n",
+      "sample: 108\n",
+      "sample: 109\n",
+      "sample: 110\n",
+      "sample: 111\n",
+      "sample: 112\n",
+      "sample: 113\n",
+      "sample: 114\n",
+      "sample: 115\n",
+      "sample: 116\n",
+      "sample: 117\n",
+      "sample: 118\n",
+      "sample: 119\n",
+      "sample: 120\n",
+      "sample: 121\n",
+      "sample: 122\n",
+      "sample: 123\n",
+      "sample: 124\n",
+      "sample: 125\n",
+      "sample: 126\n",
+      "sample: 127\n",
+      "sample: 128\n",
+      "sample: 129\n",
+      "sample: 130\n",
+      "sample: 131\n",
+      "sample: 132\n",
+      "sample: 133\n",
+      "sample: 134\n",
+      "sample: 135\n",
+      "sample: 136\n",
+      "sample: 137\n",
+      "sample: 138\n",
+      "sample: 139\n",
+      "sample: 140\n",
+      "sample: 141\n",
+      "sample: 142\n",
+      "sample: 143\n",
+      "sample: 144\n",
+      "sample: 145\n",
+      "sample: 146\n",
+      "sample: 147\n",
+      "sample: 148\n",
+      "sample: 149\n",
+      "sample: 150\n",
+      "sample: 151\n",
+      "sample: 152\n",
+      "sample: 153\n",
+      "sample: 154\n",
+      "sample: 155\n",
+      "sample: 156\n",
+      "sample: 157\n",
+      "sample: 158\n",
+      "sample: 159\n",
+      "sample: 160\n",
+      "sample: 161\n",
+      "sample: 162\n",
+      "sample: 163\n",
+      "sample: 164\n",
+      "sample: 165\n",
+      "sample: 166\n",
+      "sample: 167\n",
+      "sample: 168\n",
+      "sample: 169\n",
+      "sample: 170\n",
+      "sample: 171\n",
+      "sample: 172\n",
+      "sample: 173\n",
+      "sample: 174\n",
+      "sample: 175\n",
+      "sample: 176\n",
+      "sample: 177\n",
+      "sample: 178\n",
+      "sample: 179\n",
+      "sample: 180\n",
+      "sample: 181\n",
+      "sample: 182\n",
+      "sample: 183\n",
+      "sample: 184\n",
+      "sample: 185\n",
+      "sample: 186\n",
+      "sample: 187\n",
+      "sample: 188\n",
+      "sample: 189\n",
+      "sample: 190\n",
+      "sample: 191\n",
+      "sample: 192\n",
+      "sample: 193\n",
+      "sample: 194\n",
+      "sample: 195\n",
+      "sample: 196\n",
+      "sample: 197\n",
+      "sample: 198\n",
+      "sample: 199\n",
+      "inference finished\n"
+     ]
+    }
+   ],
    "source": [
     "model = LDA(K, V, D, N)\n",
     "print(\"model constructed\")\n",
@@ -186,9 +725,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "266.5201461315155\n",
+      "topic 0\n",
+      "comput 0.059316937\n",
+      "light 0.059316937\n",
+      "level 0.049447156\n",
+      "environ 0.049447156\n",
+      "given 0.0297079\n",
+      "higher 0.0297079\n",
+      "multipl 0.019838106\n",
+      "bayesian 0.019838106\n",
+      "limit 0.019838106\n",
+      "interpret 0.019838106\n",
+      "topic 1\n",
+      "languag 0.07833289\n",
+      "dynam 0.06528833\n",
+      "result 0.06528833\n",
+      "gener 0.05876606\n",
+      "distribut 0.04572139\n",
+      "input 0.032676708\n",
+      "base 0.026154483\n",
+      "output 0.026154483\n",
+      "data 0.026154483\n",
+      "dendrit 0.019632112\n",
+      "topic 2\n",
+      "attractor 0.05833084\n",
+      "spike 0.04376643\n",
+      "select 0.036484208\n",
+      "propos 0.029201943\n",
+      "stop 0.029201943\n",
+      "tune 0.029201943\n",
+      "function 0.029201943\n",
+      "encod 0.029201943\n",
+      "classif 0.021919563\n",
+      "accuraci 0.021919563\n",
+      "topic 3\n",
+      "synapt 0.055889044\n",
+      "connect 0.055889044\n",
+      "cell 0.041934043\n",
+      "tempor 0.041934043\n",
+      "task 0.041934043\n",
+      "provid 0.0349568\n",
+      "order 0.0349568\n",
+      "channel 0.027979372\n",
+      "psychophys 0.021001989\n",
+      "synchroni 0.021001989\n",
+      "topic 4\n",
+      "model 0.08793636\n",
+      "figur 0.06282967\n",
+      "effect 0.05027616\n",
+      "respons 0.05027616\n",
+      "complex 0.031446103\n",
+      "synaps 0.031446103\n",
+      "node 0.031446103\n",
+      "observ 0.025169417\n",
+      "group 0.025169417\n",
+      "modul 0.025169417\n",
+      "topic 5\n",
+      "show 0.059591357\n",
+      "attent 0.045850135\n",
+      "visual 0.036689278\n",
+      "neural 0.036689278\n",
+      "process 0.036689278\n",
+      "system 0.032108795\n",
+      "ep 0.027528329\n",
+      "also 0.027528329\n",
+      "may 0.027528329\n",
+      "recognit 0.022947984\n",
+      "topic 6\n",
+      "network 0.10404532\n",
+      "inform 0.057248197\n",
+      "use 0.057248197\n",
+      "spatial 0.05204868\n",
+      "two 0.03125\n",
+      "stimulu 0.026050387\n",
+      "control 0.026050387\n",
+      "vr 0.026050387\n",
+      "work 0.02085066\n",
+      "experi 0.02085066\n",
+      "topic 7\n",
+      "neuron 0.13834766\n",
+      "learn 0.10227264\n",
+      "hebbian 0.03613519\n",
+      "find 0.03613519\n",
+      "behavior 0.03012272\n",
+      "layer 0.024110157\n",
+      "suggest 0.024110157\n",
+      "recurr 0.024110157\n",
+      "describ 0.024110157\n",
+      "volum 0.018097641\n",
+      "topic 8\n",
+      "abstract 0.14097013\n",
+      "differ 0.041157752\n",
+      "rule 0.041157752\n",
+      "paper 0.035286456\n",
+      "acquisit 0.035286456\n",
+      "similar 0.029415164\n",
+      "mode 0.023543876\n",
+      "form 0.023543876\n",
+      "field 0.023543876\n",
+      "differenti 0.023543876\n",
+      "77.0\n",
+      "topic 0 pmi: -0.174741\n",
+      "83.0\n",
+      "topic 1 pmi: -0.146410\n",
+      "70.0\n",
+      "topic 2 pmi: 0.443715\n",
+      "74.0\n",
+      "topic 3 pmi: 0.581513\n",
+      "85.0\n",
+      "topic 4 pmi: 0.154923\n",
+      "84.0\n",
+      "topic 5 pmi: 0.521320\n",
+      "85.0\n",
+      "topic 6 pmi: 0.123726\n",
+      "79.0\n",
+      "topic 7 pmi: 0.386076\n",
+      "81.0\n",
+      "topic 8 pmi: 0.275334\n"
+     ]
+    }
+   ],
    "source": [
     "print(time.time() - t1)\n",
     "model.getTopWords(tokens)\n",
@@ -260,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -428,9 +1092,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model constructed\n",
-      "20/20 [100%] ██████████████████████████████ Elapsed: 95s | Loss: 9379.291\n",
-      "inference finished\n"
+      "model constructed\n"
      ]
     }
    ],
